# partclone

./: .gitignore  ChangeLog  HACKING  INSTALL  Makefile.am  README.md  config.h.in  configure.ac  libpartclone.pc.in  partclone-0.3.5.pc.in
lib/: Makefile.am  libpartclone.c  libpartclone.h  libpartclone.h.in  partclone.c  partclone.h
po/: fr_FR.gmo  fr_FR.po  pt_BR.gmo  pt_BR.po  vi.gmo  vi.po  zh_CN.gmo  zh_CN.po  zh_TW.gmo  zh_TW.po
src/: Makefile.am  btrfsclone.c  checksum.c  checksum.h  exfatclone.c  extfsclone.c  f2fsclone.c  fatclone.c  fuseimg.c  hfsplusclone.c  info.c  main.c  minixclone.c  ntfsclone-ng.c  partclone.c  partclone.h  progress.c  progress.h  readblock.c  version.h  xfsclone.c
src/btrfs/: btrfs-list.c  extent-cache.c  qgroup.c  utils-lib.c  utils.c  utils.h  volumes.c
src/xfs/: init.c  kmem.c  libxfs.h  libxfs_io.h  libxfs_priv.h  linux.c  logitem.c  rdwr.c  trans.c  util.c  xfs_alloc_btree.c  xfs_attr.c  xfs_attr_leaf.c  xfs_attr_remote.c  xfs_bmap.c  xfs_bmap_btree.c  xfs_da_btree.c  xfs_dir2_block.c  xfs_dir2_node.c  xfs_dir2_sf.c  xfs_ialloc_btree.c  xfs_inode_fork.c  xfs_trans.h
tests/: Makefile.am  README.md  clang-analyzer.sh  test-libpartclone-extfs.c  test-libpartclone-info.c  test-libpartclone-ntfs.c  test-libpartclone.c
